--- a/src/jdk.compiler/share/man/javac.1
+++ b/src/jdk.compiler/share/man/javac.1
@@ -2250,7 +2250,7 @@ some of its own fields would generate an incorrect result.
 .PP
 Warnings are only generated when a potential subclass could exist
 outside of the current module (or package, if no module) being compiled.
-For eaxmple, final and non-public classes never generate warnings.
+For example, final and non-public classes never generate warnings.
 .RE
 .TP
 \f[V]try\f[R]
